--- a/dist.ini
+++ b/dist.ini
@@ -8,5 +8,10 @@ copyright_holder = Steven Haryanto
 [@Author::SHARYANTO]
 :version=0.23
 
+[Prereqs / TestRequires]
+File::chdir=0
+File::Slurp::Tiny=0
+Test::More=0.98
+
 [Prereqs]
 perl=5.010001
