--- a/dist.ini
+++ b/dist.ini
@@ -11,6 +11,7 @@ copyright_holder = Steven Haryanto
 [Prereqs / TestRequires]
 File::chdir=0
 File::Slurp::Tiny=0
+Filesys::Cap=0
 Test::More=0.98
 
 [Prereqs]
