--- a/dist.ini
+++ b/dist.ini
@@ -1,4 +1,4 @@
-version = 0.17
+version = 0.18
 
 name    = Complete-Module
 
@@ -15,18 +15,14 @@ Test::More=0.98
 
 [Prereqs]
 perl=5.010001
-
-;!lint_prereqs assume-used # spec/config
-Complete=0.11
-
-Complete::Path=0.12
-
-Complete::Util=0.15
-
+Complete::Path=0.14
+Complete::Setting=0.13
+Complete::Util=0.34
 List::MoreUtils=0
-
 ;Log::Any=0
 
 [Prereqs / DevelopRecommends]
 ;!lint_prereqs assume-used # spec
 Rinci=1.1.0
+;!lint_prereqs assume-used # spec
+Complete=0.13
