--- a/dist.ini
+++ b/dist.ini
@@ -15,9 +15,9 @@ Test::More=0.98
 
 [Prereqs]
 perl=5.010001
-Complete::Path=0.18
-Complete::Setting=0.14
-Complete::Util=0.37
+Complete::Path=0.20
+Complete::Common=0.21
+Complete::Util=0.41
 List::MoreUtils=0
 ;Log::Any=0
 
