[dist] Re-pass lint-prereqs (core modules must now be listed)

--- a/dist.ini
+++ b/dist.ini
@@ -8,16 +8,25 @@ name    = Complete-Module
 :version=0.23
 
 [Prereqs / TestRequires]
+lib=0
+
 File::chdir=0
 File::Slurp::Tiny=0
+File::Temp=0
 Filesys::Cap=0
+FindBin=0
 Test::More=0.98
 
 [Prereqs]
 perl=5.010001
+
+strict=0
+warnings=0
+
 Complete::Path=0.20
 Complete::Common=0.21
 Complete::Util=0.41
+Exporter=0
 List::MoreUtils=0
 ;Log::Any=0
 
