--- a/dist.ini
+++ b/dist.ini
@@ -30,8 +30,6 @@ Exporter=0
 List::MoreUtils=0
 ;Log::Any=0
 
-[Prereqs / DevelopRecommends]
-;!lint_prereqs assume-used # spec
-Rinci=1.1.0
-;!lint_prereqs assume-used # spec
-Complete=0.13
+[Prereqs / DevelopSuggests]
+_SPEC::Complete=0.13
+_SPEC::Rinci=1.1.0
