--- a/dist.ini
+++ b/dist.ini
@@ -30,6 +30,8 @@ Exporter=0
 List::MoreUtils=0
 ;Log::Any=0
 
-[Prereqs / DevelopSuggests]
-_SPEC::Complete=0.13
-_SPEC::Rinci=1.1.0
+[Prereqs / DevelopX_spec]
+-phase=develop
+-relationship=x_spec
+Complete=0.13
+Rinci=1.1.0
