--- a/dist.ini
+++ b/dist.ini
@@ -9,9 +9,9 @@ name    = Complete-Module
 :version=0.58
 [Prereqs / TestRequires]
 lib=0
-
+Complete::Util=0.57
 File::chdir=0
-File::Slurp::Tiny=0
+File::Slurper=0
 File::Temp=0
 Filesys::Cap=0
 FindBin=0
@@ -19,13 +19,10 @@ Test::More=0.98
 
 [Prereqs]
 perl=5.010001
-
 strict=0
 warnings=0
-
+Complete::Common=0.22
 Complete::Path=0.20
-Complete::Common=0.21
-Complete::Util=0.41
 Exporter=0
 List::MoreUtils=0
 ;Log::Any=0
@@ -33,5 +30,6 @@ List::MoreUtils=0
 [Prereqs / DevelopX_spec]
 -phase=develop
 -relationship=x_spec
-Complete=0.13
+Complete=0.18
 Rinci=1.1.0
+
