--- a/dist.ini
+++ b/dist.ini
@@ -23,8 +23,8 @@ strict=0
 warnings=0
 Complete::Common=0.22
 Complete::Path=0.20
-Exporter=0
-List::MoreUtils=0
+Exporter=5.57
+List::Util=1.45
 ;Log::Any=0
 
 [Prereqs / DevelopX_spec]
